<resources>
    <string name="app_name">Drift Home Saviour</string>
    <string name="d_app_or_divider">or</string>
    <string name="d_header_btn">History</string>
    <string name="web_server_client_id">769783667407-4jtuedlc1edvu61tgcbq2ppdom1sv88c.apps.googleusercontent.com</string>

    <string name="d_signin_text1">Sign In</string>
    <string name="d_signin_text2">Email</string>
    <string name="d_signin_edittext1_placeholder">ex: john@gmail.com</string>
    <string name="d_signin_text3">Password</string>
    <string name="d_signin_btn1">Take me Home!</string>
    <string name="d_signin_btn2">Wait.. I’m new to this!</string>

    <string name="d_signup_text1">Sign Up</string>
    <string name="d_signup_text2">Name</string>
    <string name="d_signup_edittext1_placeholder">ex: John Doe</string>
    <string name="d_signup_text3">Email</string>
    <string name="d_signup_edittext2_placeholder">ex: john@gmail.com</string>
    <string name="d_signup_text4">Mobile</string>
    <string name="d_signup_edittext3_placeholder">ex: 07XXXXXXXX</string>
    <string name="d_signup_text5">Password</string>
    <string name="d_signup_edittext4_placeholder">Use a strong password</string>
    <string name="d_signup_btn1">Lets Gooo!</string>
    <string name="d_signup_btn2">Hey... I’m already registered!</string>

    <string name="d_kyc_text1">KYC Information</string>
    <string name="d_kyc_text2">I hereby state that these documents provided are valid and true to the best of my knowledge. I also understand that these documents do meet the standards specified in Drift Home Terms and Policies.</string>
    <string name="d_kyc_text3">*** Please note that only cars, vans and other semi-luxury or luxury vehicles are allowed in this platform ***</string>
    <string name="d_kyc_btn1">Upload your NIC (Front)</string>
    <string name="d_kyc_btn1_retake">Retake your NIC (Front)</string>
    <string name="d_kyc_btn2">Upload your NIC (Back)</string>
    <string name="d_kyc_btn2_retake">Retake your NIC (Back)</string>
    <string name="d_kyc_btn3">Upload your Drivers’ License (Front)</string>
    <string name="d_kyc_btn3_retake">Retake your Drivers’ License (Front)</string>
    <string name="d_kyc_btn4">Upload your Drivers’ License (Back)</string>
    <string name="d_kyc_btn4_retake">Retake your Drivers’ License (Back)</string>
    <string name="d_kyc_btn5">Upload your Vehicles’ Registration</string>
    <string name="d_kyc_btn5_retake">Retake your Vehicles’ Registration</string>
    <string name="d_kyc_btn6">Upload the Police Clearance certificate</string>
    <string name="d_kyc_btn6_retake">Retake the Police Clearance certificate</string>
    <string name="d_kyc_btn7">Submit</string>

    <string name="d_otpVerification_verifyEmail">Verify the email</string>
    <string name="d_otpVerification_verifyLogin">Login Verification</string>
    <string name="d_otpVerification_text1">Enter the verification code sent to your email.</string>
    <string name="d_otpVerification_btn1">Verify</string>
    <string name="d_otpVerification_btn2">Resend Code</string>
    <string name="d_otpVerification_edittext1_placeholder">******</string>

    <string name="d_homeFragment_text1">Good Morning,</string>
    <string name="d_homeFragment_text2">____________</string>
    <string name="d_homeFragment_text3">Please complete your KYC to start the service</string>
    <string name="d_homeFragment_text4">Your KYC is pending approval. You will be notified when approved.</string>
    <string name="d_homeFragment_text5">Your KYC is declined. Please resubmit a new KYC.</string>
    <string name="d_homeFragment_btn1">Fill the KYC</string>
    <string name="d_homeFragment_btn2">Resubmit KYC</string>

    <string name="d_profileFragment_text1">Profile</string>
    <string name="d_profileFragment_text2">My Addresses</string>
    <string name="d_profileFragment_text3">Name</string>
    <string name="d_profileFragment_edittext1_placeholder">ex: John Doe</string>
    <string name="d_profileFragment_text4">Date of Birth</string>
    <string name="d_profileFragment_edittext2_placeholder">Select a date</string>
    <string name="d_profileFragment_text5">Mobile</string>
    <string name="d_profileFragment_edittext3_placeholder">ex. 0771231234</string>
    <string name="d_profileFragment_text6">Gender</string>
    <string-array name="d_profileFragment_genderSpinner">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="d_profileFragment_text7">Email</string>
    <string name="d_profileFragment_edittext5_placeholder">ex: john@gmail.com</string>
    <string name="d_profileFragment_text8">Vehicle</string>
    <string name="d_profileFragment_edittext6_placeholder">ex: Toyota Corolla</string>
    <string name="d_profileFragment_btn1">Save</string>

    <string name="d_settingsFragment_text1">Settings</string>
    <string name="d_settingsFragment_btn1">Withdraw money</string>
    <string name="d_settingsFragment_btn2">Logout</string>

    <string name="d_withdrawMoney_text1">Withdraw Money</string>
    <string name="d_withdrawMoney_text2">Total Coins</string>
    <string name="d_withdrawMoney_text3">Commission</string>
    <string name="d_withdrawMoney_text4">Redeemable Balance</string>
    <string name="d_withdrawMoney_text5">-</string>
    <string name="d_withdrawMoney_text6">=</string>
    <string name="d_withdrawMoney_text7">7800</string>
    <string name="d_withdrawMoney_text8">780</string>
    <string name="d_withdrawMoney_text9">7020</string>
    <string name="d_withdrawMoney_text10">Account Holder Name</string>
    <string name="d_withdrawMoney_text11">Account Number</string>
    <string name="d_withdrawMoney_text12">Bank Name</string>
    <string name="d_withdrawMoney_text13">*** Please note that a request for money withdrawal may process up to 5 business days. Also note that Drift Home platform keeps 10% of all hires as a commission for the provided service. ***</string>
    <string name="d_withdrawMoney_editText1">John Doe</string>
    <string name="d_withdrawMoney_editText2">############</string>
    <string name="d_withdrawMoney_editText3">Commercial Bank</string>
    <string name="d_withdrawMoney_btn1">Request</string>
    <string name="base_url">http://192.168.8.162:5000</string>

    <string name="d_rideRequest_text1">Name:</string>
    <string name="d_rideRequest_text2">______________</string>
    <string name="d_rideRequest_text3">Pickup Location</string>
    <string name="d_rideRequest_text4">(__KM Away)</string>
    <string name="d_rideRequest_btn1">Reject</string>
    <string name="d_rideRequest_btn2">Accept</string>

    <string name="d_pickup_text1_pickupStarted">Pickup Started</string>
    <string name="d_pickup_text1_pickedup">Picked Up</string>
    <string name="d_pickup_text2">___________________</string>
    <string name="d_pickup_text3">______________________________</string>
    <string name="d_pickup_text4">Pickup Location</string>
    <string name="d_pickup_btn1">Report</string>
    <string name="d_pickup_btn2">Cancel</string>
    <string name="d_pickup_btn3_text1">Mark in 20s</string>
    <string name="d_pickup_btn3_text2">Mark as Arrived</string>
    <string name="d_pickup_btn3_text3">I arrived</string>
    <string name="d_pickup_btn4">Start Trip</string>

    <string name="d_trip_text1_tripStarted">Trip Started</string>
    <string name="d_trip_text1_tripEnd">Trip Ended</string>
    <string name="d_trip_text2">Jayathilaka Weerasinghe</string>
    <string name="d_trip_text3">2, Havelock Road, Colombo 03, Colombo</string>
    <string name="d_trip_text4">2, Havelock Road, Colombo 03, Colombo</string>
    <string name="d_trip_text5">Total Fare</string>
    <string name="d_trip_text6_placeholder">Rs._______</string>
    <string name="d_trip_text7">Give Feedback</string>
    <string name="d_trip_editText1">Tell us more...</string>
    <string name="d_trip_btn1">Report</string>
    <string name="d_trip_btn2_awaiting">End in 20s</string>
    <string name="d_trip_btn2_end">End Trip</string>
    <string name="d_trip_btn3">Submit</string>
    <string name="d_trip_btn4">Back To Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

</resources>