<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WithdrawMoneyActivity">

    <EditText
        android:id="@+id/editTextText13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/d_withdrawMoney_editText3"
        android:inputType="text"
        android:textColorHint="@color/d_gray3"
        app:layout_constraintEnd_toEndOf="@+id/editTextText7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lexend_deca"
        android:text="@string/d_withdrawMoney_text12"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editTextText7"
        app:layout_constraintTop_toBottomOf="@+id/editTextText7" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/d_withdrawMoney_editText2"
        android:inputType="text"
        android:textColorHint="@color/d_gray3"
        app:layout_constraintEnd_toEndOf="@+id/editTextText6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView37"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lexend_deca"
        android:text="@string/d_withdrawMoney_text11"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editTextText6"
        app:layout_constraintTop_toBottomOf="@+id/editTextText6" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.ryvk.drifthomesaviour.CommonHeaderFragment"
        android:layout_width="0dp"
        android:layout_height="@dimen/d_common_header_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/money_bag"
        android:drawablePadding="2dp"
        android:fontFamily="@font/lexend_deca"
        android:text="@string/d_withdrawMoney_text1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/d_button_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_withdrawMoney_text9"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView29"
                app:layout_constraintStart_toStartOf="@+id/textView29"
                app:layout_constraintTop_toBottomOf="@+id/textView29" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_withdrawMoney_text6"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView34"
                app:layout_constraintEnd_toEndOf="@+id/textView28"
                app:layout_constraintStart_toStartOf="@+id/textView28"
                app:layout_constraintTop_toTopOf="@+id/textView34" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_withdrawMoney_text8"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView33"
                app:layout_constraintEnd_toEndOf="@+id/textView27"
                app:layout_constraintStart_toStartOf="@+id/textView27"
                app:layout_constraintTop_toTopOf="@+id/textView33" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_withdrawMoney_text5"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView32"
                app:layout_constraintEnd_toEndOf="@+id/textView26"
                app:layout_constraintStart_toStartOf="@+id/textView26"
                app:layout_constraintTop_toTopOf="@+id/textView32" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_withdrawMoney_text4"
                android:textAlignment="center"
                android:textColor="@color/d_gray3"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView28"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView28"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_withdrawMoney_text6"
                android:textColor="@color/d_gray3"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView27"
                app:layout_constraintEnd_toStartOf="@+id/textView29"
                app:layout_constraintStart_toEndOf="@+id/textView27"
                app:layout_constraintTop_toTopOf="@+id/textView27" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_withdrawMoney_text3"
                android:textAlignment="center"
                android:textColor="@color/d_gray3"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView26"
                app:layout_constraintStart_toEndOf="@+id/textView26"
                app:layout_constraintTop_toTopOf="@+id/textView26" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_withdrawMoney_text5"
                android:textColor="@color/d_gray3"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView25"
                app:layout_constraintStart_toEndOf="@+id/textView25"
                app:layout_constraintTop_toTopOf="@+id/textView25" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_withdrawMoney_text2"
                android:textColor="@color/d_gray3"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_withdrawMoney_text7"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView32"
                app:layout_constraintEnd_toEndOf="@+id/textView25"
                app:layout_constraintStart_toStartOf="@+id/textView25"
                app:layout_constraintTop_toTopOf="@+id/textView32" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lexend_deca"
        android:text="@string/d_withdrawMoney_text10"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/d_withdrawMoney_editText1"
        android:inputType="text"
        android:textColorHint="@color/d_gray3"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/d_blue"
        android:text="@string/d_withdrawMoney_btn1"
        app:cornerRadius="@dimen/d_button_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText13" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lexend_deca"
        android:text="@string/d_withdrawMoney_text13"
        android:textAlignment="textStart"
        android:textColor="@color/d_red1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText13"
        app:layout_constraintStart_toStartOf="@+id/editTextText13"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

</androidx.constraintlayout.widget.ConstraintLayout>