<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:editable="false"
                android:enabled="false"
                android:ems="10"
                android:fontFamily="@font/lexend_deca"
                android:hint="@string/d_profileFragment_edittext6_placeholder"
                android:inputType="text"
                android:textColorHint="@color/d_gray2"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/editTextText12"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView22"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_profileFragment_text8"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/editTextText12"
                app:layout_constraintTop_toBottomOf="@+id/editTextText12" />

            <EditText
                android:id="@+id/editTextText12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:editable="false"
                android:enabled="false"
                android:ems="10"
                android:fontFamily="@font/lexend_deca"
                android:hint="@string/d_profileFragment_edittext5_placeholder"
                android:inputType="text"
                android:textColorHint="@color/d_gray2"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/spinner"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView42"
                app:layout_constraintTop_toBottomOf="@+id/textView42" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_profileFragment_text7"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:entries="@array/d_profileFragment_genderSpinner"
                app:layout_constraintEnd_toEndOf="@+id/editTextText10"
                app:layout_constraintStart_toStartOf="@+id/textView41"
                app:layout_constraintTop_toBottomOf="@+id/textView41" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_profileFragment_text6"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/editTextText10"
                app:layout_constraintTop_toBottomOf="@+id/editTextText10" />

            <EditText
                android:id="@+id/editTextText10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/lexend_deca"
                android:hint="@string/d_profileFragment_edittext3_placeholder"
                android:inputType="text"
                android:textColorHint="@color/d_gray2"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/editTextText9"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView40"
                app:layout_constraintTop_toBottomOf="@+id/textView40" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_profileFragment_text5"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/editTextText9"
                app:layout_constraintTop_toBottomOf="@+id/editTextText9" />

            <EditText
                android:id="@+id/editTextText9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="true"
                android:ems="10"
                android:fontFamily="@font/lexend_deca"
                android:hint="@string/d_profileFragment_edittext2_placeholder"
                android:inputType="text"
                android:textColorHint="@color/d_gray2"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/editTextText8"
                app:layout_constraintStart_toStartOf="@+id/textView38"
                app:layout_constraintTop_toBottomOf="@+id/textView38" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_profileFragment_text4"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/editTextText8"
                app:layout_constraintTop_toBottomOf="@+id/editTextText8" />

            <EditText
                android:id="@+id/editTextText8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:fontFamily="@font/lexend_deca"
                android:hint="@string/d_profileFragment_edittext1_placeholder"
                android:inputType="text"
                android:textColorHint="@color/d_gray2"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView39"
                app:layout_constraintTop_toBottomOf="@+id/textView39" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_profileFragment_text3"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView9" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_profileFragment_text1"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="@+id/imageView7" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_profile_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/account_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView35" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/d_navbar_height"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button19" />

            <Button
                android:id="@+id/button19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/d_blue"
                android:fontFamily="@font/lexend_deca"
                android:paddingLeft="35dp"
                android:paddingTop="10dp"
                android:paddingRight="35dp"
                android:paddingBottom="10dp"
                android:text="@string/d_profileFragment_btn1"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/d_button_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>